--- a/codigo/Category_Ofertas.html
+++ b/codigo/Category_Ofertas.html
@@ -7,7 +7,7 @@
     <title>Megalodon Store - Ofertas</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_category.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
@@ -128,107 +128,108 @@
 </nav>
 
 <body>
+    <h1>Ofertas</h1>
     <div class="produtos">
         <div class="produto_card">
             <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+                <img src="/img/Produtos/Mouse Cobra.png" alt="Foto Produto">
+                <h2 class="produto_nome">Mouse Gamer Redragon Cobra M711 RGB, 10000 DPI, 7 Botões Programáveis, Black</h2>
+                <div class="produto_preco"><h5>R$140,90</h5><h2>R$113,90</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/Ryzens5_4600g.png" alt="Foto Produto">
+                <h2 class="produto_nome">Processador AMD Ryzen 5 4600G 3.7GHz (4.2GHz Turbo), 6-Cores 12-Threads, Cooler Wraith Stealth, AM4</h2>
+                <div class="produto_preco"><h5>R$1100,00</h5><h2>R$919,00</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/AsusH510.png" alt="Foto Produto">
+                <h2 class="produto_nome">Placa Mãe ASUS PRIME H510M-E, Chipset H510, Intel LGA 1200, mATX, DDR4</h2>
+                <div class="produto_preco"><h5>R$650,00</h5><h2>R$589,90</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/fonte550wgigabyte.png" alt="Foto Produto">
+                <h2 class="produto_nome">Fonte Gigabyte P550B 550W, 80 Plus Bronze, PFC Ativo</h2>
+                <div class="produto_preco"><h5>R$400,00</h5><h2>R$379,90</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/AsusTufB550M.png" alt="Foto Produto">
+                <h2 class="produto_nome">Placa Mãe Asus TUF Gaming B550M-Plus, Chipset B550, AMD AM4, mATX, DDR4</h2>
+                <div class="produto_preco"><h5>R$1250,00</h5><h2>R$1099,00</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/IntelCoreI5_10400f.png" alt="Foto Produto">
+                <h2 class="produto_nome">Processador Intel Core i5 10400F 2.90GHz (4.30GHz Turbo), 10ª Geração, 6-Cores 12-Threads</h2>
+                <div class="produto_preco"><h5>R$900,50</h5><h2>R$839,99</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/IntelCoreI5_11400f.png" alt="Foto Produto">
+                <h2 class="produto_nome">Processador Intel Core i5 11400F 2.6GHz (4.4GHz Turbo), 11ª Geração, 6-Cores 12-Threads</h2>
+                <div class="produto_preco"><h5>R$1100,00</h5><h2>R$999,00</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/Ryzen5_3600.png" alt="Foto Produto">
+                <h2 class="produto_nome">Processador AMD Ryzen 5 3600 3.6GHz + Cooler AMD Wraith Stealth</h2>
+                <div class="produto_preco"><h5>R$950,79</h5>R$899,00</div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
         <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/Nvidia3060Gigabyte.png" alt="Foto Produto">
+                <h2 class="produto_nome">Placa de Vídeo Gigabyte GeForce RTX 3060 Gaming OC, LHR, 12GB, GDDR6, DLSS, Ray Tracing</h2>
+                <div class="produto_preco"><h5>R$2999,99</h5><h2>R$2829,00</h2></div>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>        <div class="produto_card">
+            <a href="#" class="produto_link">
+                <img src="/img/Produtos/MouseCobraWhite.png" alt="Foto Produto">
+                <h2 class="produto_nome">Mouse Gamer Redragon Cobra M711W RGB, 10000 DPI, 7 Botões Programáveis, White</h2>
+                <div class="produto_preco"><h5>R$130,00</h5><h2>R$119,90</h2></div>
             </a>
             <a href="#" class="produto_botao">
                 <h2>Adicionar ao Carrinho</h2>
             </a>
         </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
+
     </div>
 </body>
 
