--- a/codigo/Favorites.html
+++ b/codigo/Favorites.html
@@ -7,7 +7,7 @@
     <title>Megalodon Store - Meus Favoritos</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_favorites.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
