--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -7,7 +7,7 @@
     <title>Megalodon Store - Página Inicial</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_home.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
@@ -136,44 +136,42 @@
                 </picture>
         </a>
 
-        <div class="title">
-            <h1>Categorias</h1>
-        </div>
+        <h1>Categorias</h1>
         
         <div class="categorias">
             <a href="/codigo/Category_Ofertas.html" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/discount.png" alt=""> <p>
                     Ofertas
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/price-sticker.png" alt=""> <p>
                     Lançamentos
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/top.png" alt=""> <p>
                     Mais Vendidos
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/box.png" alt=""> <p>
                     Pacotes de Produtos
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/wrench.png" alt=""> <p>
                     Serviços de Manutenção
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/settings.png" alt=""> <p>
                     Monte seu PC
                 </div>
             </a>
@@ -186,37 +184,37 @@
         <div class="categorias">
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_amd.png" alt=""> <p>
                     AMD
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_nvidia.png" alt=""> <p>
                     NVIDIA
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_intel.png" alt=""> <p>
                     Intel
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_asus.png" alt=""> <p>
                     Asus
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_gigabyte.png" alt=""> <p>
                     Gygabyte
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
+                    <img src="/img/logo_redragon.png" alt=""> <p>
                     Redragon
                 </div>
             </a>
