--- a/codigo/Product_page.html
+++ b/codigo/Product_page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megalodon Store - Mouse Gamer</title>
+    <title>Megalodon Store - Mouse Cobra</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_product_page.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
@@ -129,15 +129,17 @@
 <body>
     <div class="desc_page">
         <div class="desc_nome">
-            <h1>Nome Produto</h1>
+            <h1>Mouse Gamer Redragon Cobra M711 RGB, 10000 DPI, 7 Botões Programáveis, Black</h1>
+            <br>
             <h2>Porduto Novo!</h2>
             <h2>Estoque: 243</h2>
         </div>
         <div class="desc_img">
-            <img src="/img/foto-produto-large.png" alt="Produto">
+            <img src="/img/Produtos/Mouse Cobra large.png" alt="Produto">
         </div>
         <div class="desc_preco">
-            <h1>R$00,00</h1>
+            <h2>R$149,49</h2>
+            <h1>R$113.90</h1>
             <h3>à vista com 15% de desconto no boleto ou pix</h3>
         </div>
         <div class="desc_favoritos">
@@ -147,11 +149,8 @@
             <button><i class="fa-solid fa-cart-plus"></i><h2>Adicionar ao Carrinho</h2></button>
         </div>
         <div class="desc_desc">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Iusto debitis rerum ipsum nobis culpa nesciunt
-                iste unde illo quisquam? Minus at quisquam facere quis
-                ab vel omnis alias cupiditate aliquam.
-            </h2>
+            <h3>O mouse gamer Cobra Chroma da Redragon, traz diversos fatores que ajudam os gamers, além da maior velocidade para executar seus movimentos, com os 10.000 DPI, ele é ergonômico trazendo conforto em sua “pegada” para os destros.
+            </h3>
         </div>
     </div>
 </body>
