--- a/codigo/info.html
+++ b/codigo/info.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megalodon Store - Página Inicial</title>
+    <title>Megalodon Store - Obter Ajuda</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_info.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
@@ -129,35 +129,49 @@
 
 <body>
     <div class="info_page">
-        <div class="busca_info">
-            
+        <h2>ESTÁ COM ALGUMA DÚVIDA?</h2>
+        <div class="search_faq">
+            <input type="text" id="search" placeholder="Buscar ajuda...">
+            <button type="submit" id="search_button"><i class="fa fa-search"></i></button>
         </div>
-        <div class="faq">
-            <ul>pergunta
-                <li>
-                    resposta
-                </li>
-            </ul>
-            <ul>pergunta
-                <li>
-                    resposta
-                </li>
-            </ul>
-            <ul>pergunta
-                <li>
-                    resposta
-                </li>
-            </ul>
-            <ul>pergunta
-                <li>
-                    resposta
-                </li>
-            </ul>
-            <ul>pergunta
-                <li>
-                    resposta
-                </li>
-            </ul>
+        <ul class="qanda">
+            <li class="q">
+                <p>Qual é o prazo para confirmação do pagamento?</p>
+                <div class="a"><p>Pagamentos efetuados via Boleto Bancário e Cartão de Crédito têm um prazo de 1 a 2 dias úteis para confirmação; já para pagamentos via PIX, o prazo de confirmação é de até 30 minutos. Se esse período for expirado e o pagamento de seu pedido permanecer indicado como pendente, será necessário entrar em contato com o nosso Atendimento.</p></div>
+            </li>
+            <li class="q">
+                <p>Posso alterar o endereço de entrega de um objeto em transporte?</p>
+                <div class="a"><p>Quando seu pedido já estiver em transporte, infelizmente não será possível alterar o endereço de entrega. No entanto, você poderá nos contatar para verificar a possibilidade de solicitarmos o retorno do pedido ao KaBuM!, para assim efetuarmos a alteração do endereço.</p></div>
+            </li>
+            <li class="q">
+                <p>Qual é o prazo para confirmação do pagamento?</p>
+                <div class="a"><p>Pagamentos efetuados via Boleto Bancário e Cartão de Crédito têm um prazo de 1 a 2 dias úteis para confirmação; já para pagamentos via PIX, o prazo de confirmação é de até 30 minutos. Se esse período for expirado e o pagamento de seu pedido permanecer indicado como pendente, será necessário entrar em contato com o nosso Atendimento.</p></div>
+            </li>
+            <li class="q">
+                <p>Posso alterar o endereço de entrega de um objeto em transporte?</p>
+                <div class="a"><p>Quando seu pedido já estiver em transporte, infelizmente não será possível alterar o endereço de entrega. No entanto, você poderá nos contatar para verificar a possibilidade de solicitarmos o retorno do pedido ao KaBuM!, para assim efetuarmos a alteração do endereço.</p></div>
+            </li>
+            <li class="q">
+                <p>Qual é o prazo para confirmação do pagamento?</p>
+                <div class="a"><p>Pagamentos efetuados via Boleto Bancário e Cartão de Crédito têm um prazo de 1 a 2 dias úteis para confirmação; já para pagamentos via PIX, o prazo de confirmação é de até 30 minutos. Se esse período for expirado e o pagamento de seu pedido permanecer indicado como pendente, será necessário entrar em contato com o nosso Atendimento.</p></div>
+            </li>
+            <li class="q">
+                <p>Posso alterar o endereço de entrega de um objeto em transporte?</p>
+                <div class="a"><p>Quando seu pedido já estiver em transporte, infelizmente não será possível alterar o endereço de entrega. No entanto, você poderá nos contatar para verificar a possibilidade de solicitarmos o retorno do pedido ao KaBuM!, para assim efetuarmos a alteração do endereço.</p></div>
+            </li>
+            <li class="q">
+                <p>Qual é o prazo para confirmação do pagamento?</p>
+                <div class="a"><p>Pagamentos efetuados via Boleto Bancário e Cartão de Crédito têm um prazo de 1 a 2 dias úteis para confirmação; já para pagamentos via PIX, o prazo de confirmação é de até 30 minutos. Se esse período for expirado e o pagamento de seu pedido permanecer indicado como pendente, será necessário entrar em contato com o nosso Atendimento.</p></div>
+            </li>
+            <li class="q">
+                <p>Posso alterar o endereço de entrega de um objeto em transporte?</p>
+                <div class="a"><p>Quando seu pedido já estiver em transporte, infelizmente não será possível alterar o endereço de entrega. No entanto, você poderá nos contatar para verificar a possibilidade de solicitarmos o retorno do pedido ao KaBuM!, para assim efetuarmos a alteração do endereço.</p></div>
+            </li>
+        </ul>
+        <hr>
+        <h2>Aprenda a montar seu PC</h2>
+        <div class="video">
+            <iframe src="https://www.youtube.com/embed/O9845EjK7o0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </body>
