--- a/codigo/Register_form.html
+++ b/codigo/Register_form.html
@@ -7,7 +7,7 @@
     <title>Megalodon Store - Entrar</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/png">
     <link rel="icon" href="/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/Master.css">
     <link rel="stylesheet" href="/css/style_register.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
@@ -137,32 +137,54 @@
                 <legend>Dados Pessoais</legend>
 
                 <label for="nome" class="nome">Nome Completo</label>
-                <input type="text" id="nome" placeholder="Ex.: João Silva" maxlength="30">
+                <input type="text" required id="nome" placeholder="Ex.: João Silva" maxlength="30">
 
                 <label for="data" class="data">Data de Nascimento</label>
-                <input type="date" id="data" placeholder="">
+                <input type="date" required id="data">
 
                 <label for="cpf" class="cpf">CPF</label>
-                <input type="number" id="cpf" placeholder="000.000.000-00" pattern="^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$">
+                <input type="text" required id="cpf" placeholder="000.000.000-00" pattern="[0-9]{3}\.[0-9]{3}\.[0-9]{3}-[0-9]{2}" title="Digite um CPF no formato: 000.000.000-00">
 
                 <label for="email" class="email">E-mail</label>
-                <input type="email" id="email" placeholder="seu@email.com">
+                <input type="email" required id="email" placeholder="seuemail@gmail.com" pattern=".+@gmail.com" title="Insira um endereço email válido (apenas G-mail)">
                 
                 <label for="estado" class="estado">Estado</label>
-                <select id="estado">
+                <select required id="estado">
                     <option value="default" selected>--</option>
-                    <option value="RS">RS</option>
-                    <option value="SP">SP</option>
-                    <option value="RJ">RJ</option>
-                    <option value="SC">SC</option>
-                    <option value="RO">RO</option>
+                    <option value="AC">Acre</option>
+                    <option value="AL">Alagoas</option>
+                    <option value="AP">Amapá</option>
+                    <option value="AM">Amazonas</option>
+                    <option value="BA">Bahia</option>
+                    <option value="CE">Ceará</option>
+                    <option value="DF">Distrito Federal</option>
+                    <option value="ES">Espírito Santo</option>
+                    <option value="GO">Goiás</option>
+                    <option value="MA">Maranhão</option>
+                    <option value="MT">Mato Grosso</option>
+                    <option value="MS">Mato Grosso do Sul</option>
+                    <option value="MG">Minas Gerais</option>
+                    <option value="PA">Pará</option>
+                    <option value="PB">Paraíba</option>
+                    <option value="PR">Paraná</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="PI">Piauí</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="RN">Rio Grande do Norte</option>
+                    <option value="RS">Rio Grande do Sul</option>
+                    <option value="RO">Rondônia</option>
+                    <option value="RR">Roraima</option>
+                    <option value="SC">Santa Catarina</option>
+                    <option value="SP">São Paulo</option>
+                    <option value="SE">Sergipe</option>
+                    <option value="TO">Tocantins</option>
                 </select>
 
                 <label for="senha" class="senha">Senha</label>
-                <input type="password" id="senha" placeholder="********" minlength="8">
+                <input type="password" required id="senha" placeholder="********" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Precisa conter pelo menos um numero, uma letra minuscula, uma letra maiuscula e oito caracteres">
 
                 <label for="confirmar_senha" class="confirmar_senha">Confirmar Senha</label>
-                <input type="password" id="confirmar_senha" placeholder="********">
+                <input type="password" required id="confirmar_senha" placeholder="********" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,} " title="Precisa conter pelo menos um numero, uma letra minuscula, uma letra maiuscula e oito caracteres">
                 
                 <input type="submit" value="Confirmar" id="confirm">
 
